<resources>
    <string name="app_name">projetjeux</string>
    <string name="actifs">Your funds: </string>
    <string name="jouer">PLAY</string>
    <string name="radio1">1$</string>
    <string name="radio2">2$</string>
    <string name="radio3">5$</string>
    <string name="chechbox">Risk-taker</string>
    <string name="ajoutargent">To add 100$</string>
    <string name="enter_code">Enter your secret code</string>
    <string name="fonds_insuffisants">Insufficient funds!</string>
    <string name="gagne">Won!</string>
    <string name="gagne_casse_cou">Won (Risk-taker)!</string>
</resources>
